--- a/Changes_old.org
+++ b/Changes_old.org
@@ -2,6 +2,8 @@
 #+AUTHOR: Carsten Dominik
 #+EMAIL: carsten at orgmode dot org
 #+STARTUP: hidestars
+#+LINK:      git http://orgmode.org/w/?p=org-mode.git;a=commit;h=%s
+#+LINK:      doc http://orgmode.org/worg/doc.html#%s
 #+KEYWORDS:  Org Org-mode Emacs outline planning note authoring project plain-text LaTeX HTML
 #+DESCRIPTION: Org Org-mode Emacs Changes ChangeLog release notes archives
 #+OPTIONS: H:3 num:nil toc:t \n:nil @:t ::t |:t ^:{} *:t TeX:t LaTeX:nil skip:nil
